# arglink_project

./: .gitignore  LICENSE  README.md  pyproject.toml
src/argkit/: __init__.py  cli.py  core.py  runtime.py  static.py
src/arglink/: __init__.py  core.py
