[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "argkit"
authors = [
  { name="Jiyuan Yang" },
]
description = "A kit that automatically generates the parser arguments corresponding to a class and creates the instance of this class using the parsed arguments."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = []

dynamic = ["version"]

[project.scripts]
argkit_feed = "argkit.static:modify_pattern_feed"

[project.urls]
Homepage = "https://github.com/ygjiyn/argkit_project"
Issues = "https://github.com/ygjiyn/argkit_project/issues"

[tool.setuptools.dynamic]
version = {attr = "argkit.__version__"}
