[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "arglink"
authors = [
  { name="Jiyuan Yang" },
]
description = "Linking an argument parser and a callable."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = []

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ygjiyn/arglink_project"

[tool.setuptools.dynamic]
version = {attr = "arglink.__version__"}
